--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primera Pagina Web</h1>
+    <h1>Pagina web espectacular</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, 
         architecto impedit excepturi modi quibusdam, cupiditate tempore 
         omnis ipsum enim eveniet obcaecati quam nihil nisi debitis velit, 
